@@ -1,5 +1,10 @@
 2010-05-26	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* librpc/src/rpc/clnt_tcp.c: Partial merger from freebsd
+	(Fix strict-aliasing).
+
+2010-05-26	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* librpc/src/rpc/clnt_raw.c: Partial merger from freebsd
 	(Improved 16 bit compatibility; Fix strict-aliasing).
 
